Fixed intro animation bug on mobile, and very large screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -241,9 +241,10 @@ html, body, .ng-scope, .container-fluid, .row {
 }
 
 #about{
-  min-height: 100vh;
+  /* min-height: 90vh; */
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 #about .pic{
   margin-bottom: auto;
@@ -363,9 +364,10 @@ html, body, .ng-scope, .container-fluid, .row {
 }
 
 #intro{
-    margin: auto auto;
+    /* margin: auto auto; */
+    margin-top: 10%;
     margin-bottom: 0;
-    margin-left: 0;
+    /* margin-left: 0; */
 }
 
 .helloWorld{
@@ -381,9 +383,9 @@ html, body, .ng-scope, .container-fluid, .row {
 
 .blink{
   color: white;
-  margin: 0 auto;
-  margin-left: 0;
-  margin-bottom: 200px;
+  /* margin: 0 auto; */
+  /* margin-left: 0; */
+  /* margin-bottom: auto; */
   font-size: 22px;
   letter-spacing: .40em;
   border-right: .15em solid white;
